- pythm (0.5.1-ptt)
	
    ptt7:
	backend/mplayerbackend:
	* added dbus binding to manage e17 suspend time, partially taken from
	  Dylan Maxwell Reilly implementation
	* corrected get_meta_data error from files without them

	gtkgui pagebrowse:
	* now '+' adds only to playlist, influencing no more playing state
	* and '>' works as expected, starting to play from the first media

	gtkgui pagelist:
	* clear button now removes only selected entry, when there is one

    ptt6:
	* capitalized name in pythm.desktop and refined package creation

	mplayerbackend:
	* hack to bypass file names with exotic encodings, thanx darkmagister

	configuration file/gtkgui (section [pythm]):
	* added option to show/hide '..' entry in pagebrowse
	* added option to load/ignore coverart

	gtkgui pageplay:
	* reduced volume slider's available range to (50,97) and steps to (2,4)
	* force a redraw of title label when changing song

    ptt5:
	* added mutagen to sources (mp3 id3 tags reader)

	gtkgui pageplay/mplayerbackend:
	* added coverart and reworked layout if cover is there
	* added track number
	* now play() doesn't loop in itself no more

    ptt4:
	mplayerbackend:
	* decoding of mp3 id3 tags, usgin mutagen (get_meta_data)
	* removed tag parsing (to be readded later for files w/out tags)
	* expanded PlaylistEntry to contain id3 tags
	* stop now resets to begin of playlist
	* changed end of song->next timings (check_state)
	* various code enhancements

	configuration file:
	* option for command to aenable/disable headphones (section [cmd])
	* option to set mplayer binary path (section [mplayer])

	configuration file/gtkgui (section [pythm]):
	* option to pre-set size of pythm window
	* options to be able to use bigger fonts in pageplay/list and browse
	* option to control pagebrowse header text

	gtkgui:
	* resized gtk.notebook header (was little for my thumbs)
	* removed computer activity icon (bottom left one)
	* on opening, defaults to pagebrowse

	gtkgui pageplay: