@@ -1,5 +1,9 @@
 - pythm (0.5.1-ptt)
 	
+    ptt8:
+	mutagen:
+	* removed unneeded (up 'til now) mutagen files
+
     ptt7:
 	backend/mplayerbackend:
 	* added dbus binding to manage e17 suspend time, partially taken from
